<resources>
    <string name="app_name">Harry Potter API Rest</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="abraham_ram_rez_hern_ndez">Abraham Ramírez Hernández</string>
    <string name="harry_potter">Harry Potter</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="escoge_una_opci_n">Escoge una opción.</string>
    <string name="estudiantes">Estudiantes</string>
    <string name="profesores">Profesores</string>
    <string name="and_the">And The</string>
    <string name="api">API</string>
    <string name="profesors_icon">Profesors icon</string>
    <string name="students_icon">students icon</string>
    <string name="snitch">Snitch</string>
    <string name="tiene_habilidades_m_gicas">¿Tiene habilidades mágicas?</string>
    <string name="patronus">Patronus:</string>
    <string name="especie">Especie:</string>
    <string name="ancestro">Ancestro:</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento:</string>
    <string name="Si">Si</string>
    <string name="No">No</string>
    <string name="notFound">Sin registrar</string>
    <string name="music">Music</string>
</resources>