<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gray"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitleMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/harrytitle"
        android:text="@string/bienvenido"
        android:textColor="@color/yellow"
        android:textSize="96sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:id="@+id/tvInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/wizard"
        android:text="@string/escoge_una_opci_n"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.248"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleMain" />

    <Button
        android:id="@+id/btnStudents"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginTop="148dp"
        android:backgroundTint="@color/darkRed"
        android:fontFamily="@font/harrytitle"
        android:text="@string/estudiantes"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleMain" />

    <Button
        android:id="@+id/btnProfesors"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginTop="108dp"
        android:backgroundTint="@color/darkRed"
        android:fontFamily="@font/harrytitle"
        android:text="@string/profesores"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStudents" />

</androidx.constraintlayout.widget.ConstraintLayout>