<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg_purple"
    android:layout_height="match_parent"
    tools:context=".views.activities.DetailCharacter">

    <TextView
        android:id="@+id/tvDetailName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:fontFamily="@font/harrytitle"
        android:textColor="@color/yellow"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Name" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/ivImage"
        android:layout_width="130dp"
        android:layout_height="142dp"
        android:scaleType="center"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:riv_corner_radius="10dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="60dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="210dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="240dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="270dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="300dp" />

    <TextView
        android:id="@+id/tvHouse"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        android:fontFamily="@font/akaya_telivigala"
        android:textColor="@color/brown"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline9"
        tools:text="House" />

    <TextView
        android:id="@+id/tvDateBirthTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha_de_nacimiento"
        android:fontFamily="@font/akaya_telivigala"
        android:textSize="20sp"
        android:textColor="@color/DarkBlue"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline11" />

    <TextView
        android:id="@+id/tvDateBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/akaya_telivigala"
        android:textColor="@color/LightYellow"
        android:textSize="20sp"
        tools:text="Date"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/guideline11" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="330dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="360dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="390dp" />

    <TextView
        android:id="@+id/tvAncestryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ancestro"
        android:fontFamily="@font/akaya_telivigala"
        android:textSize="20sp"
        android:textColor="@color/DarkBlue"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline13" />

    <TextView
        android:id="@+id/tvSpeciesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/especie"
        android:fontFamily="@font/akaya_telivigala"
        android:textSize="20sp"
        android:textColor="@color/DarkBlue"
        app:layout_constraintBottom_toTopOf="@+id/guideline15"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline14" />

    <TextView
        android:id="@+id/tvWizardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tiene_habilidades_m_gicas"
        android:fontFamily="@font/akaya_telivigala"
        android:textSize="20sp"
        android:textColor="@color/DarkBlue"
        app:layout_constraintBottom_toTopOf="@+id/guideline17"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <TextView
        android:id="@+id/tvPatronusTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patronus"
        android:fontFamily="@font/akaya_telivigala"
        android:textSize="20sp"
        android:textColor="@color/DarkBlue"
        app:layout_constraintBottom_toTopOf="@+id/guideline19"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline17" />

    <TextView
        android:id="@+id/tvAncestry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Ancestro"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        android:fontFamily="@font/akaya_telivigala"
        android:textColor="@color/LightYellow"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/guideline13" />

    <TextView
        android:id="@+id/tvSpecie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/akaya_telivigala"
        android:textColor="@color/LightYellow"
        android:textSize="20sp"
        tools:text="Especie"
        app:layout_constraintBottom_toTopOf="@+id/guideline15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/guideline14" />

    <TextView
        android:id="@+id/tvWizard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Mago"
        android:fontFamily="@font/akaya_telivigala"
        android:textColor="@color/LightYellow"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <TextView
        android:id="@+id/tvPatronus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Patronus"
        android:fontFamily="@font/akaya_telivigala"
        android:textColor="@color/LightYellow"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/guideline17" />

    <ProgressBar
        android:id="@+id/pbConexion"
        style="?android:attr/progressBarStyle"
        android:layout_width="97dp"
        android:layout_height="83dp"
        android:indeterminateTint="@color/gold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.671" />

</androidx.constraintlayout.widget.ConstraintLayout>